--- a/index22.html
+++ b/index22.html
@@ -8,26 +8,28 @@
 </head>
 <body>
     <header>
-        <div id="name">
-            <span> POTCHOLI</span><span id="prénom"> Essossinam Bella</span>
+        <div class="navbar">
+            <div id="name">
+                <span> POTCHOLI</span><span id="prénom"> Essossinam Bella</span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#"> Home</a> </li>
+                    <li><a href="#"> Services</a> </li>
+                    <li><a href="#"> A propos</a> </li>
+                    <li><a href="#"> Projets</a> </li>
+                    <li><a href="#"> Compétences</a> </li>
+                    <li><a href="#"> Contact</a> </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#"> Home</a> </li>
-                <li><a href="#"> Services</a> </li>
-                <li><a href="#"> A propos</a> </li>
-                <li><a href="#"> Projets</a> </li>
-                <li><a href="#"> Compétences</a> </li>
-                <li><a href="#"> Contact</a> </li>
-            </ul>
-        </nav>
     </header>
 
     <main>     
         <section>
             <div class="Hello">
                 <h1 style="font-size: 2.6rem; margin-bottom: 15px;">
-                    <span> Hello ! Je suis Bella</span>, Développeuse en devenir et passionée du Web et du disign
+                    <span> Hello ! Je suis Bella</span>, Développeuse Web fronten et passionée du Web et du disign
                 </h1>
                 <p id="P1">
                   Contactez-nous pour tous vos projets et Services. Nous vous garantissons un travail bien satisfaisant et magnifique. Nos Services vous apporterons du succès et des progrès !
@@ -56,7 +58,7 @@
                         <img class="image_competence" src="./cs.jpg" alt="">
                     </div>
                     <p class="para_competence">
-                        Le css paraissait très compliqué pour moi au début mais en passant du temps en application, cela m'a amené me retrouver. Maintenant, j'arrive à styler mes pages en css.
+                        Je sais styler mes pages en css.
                     </p>
                 </div>
                 <div class="competence">
@@ -66,25 +68,65 @@
                         <img class="image_competence" src="./Jv.png" alt="">
                     </div>
                     <p class="para_competence">
-                        Je maitrise le langage de programmation en Javascript.
+                        Je maitrise la programmation en Javascript.
                     </p>
                 </div>
-                <div>
+                <div class="co">
                     <h2> Compétences en utilisation d'internet</h2>
-                    <div class="block_competence_image">
-                      
+                    <div class="block_competence_image">   
                         <img class="image_competence" src="./Net.jpg" alt="">
                     </div>
-                    <p>
-                        Presque tous les jours, je m'entraine en faissant des recherches sur internet.
+                    <p class="para_competence">
+                        La recherche sur internet  m'impressionne tellement.
                     </p>
                 </div>   
             </div>
         </section>
+        <section class="section1">
+            <h1>Autres Compétences</h1>
+            <div class="competences">
+                <div class="competence">
+                    <h2> Compétences en cuisine</h2>
+                    <div class="block_competence_image">
 
-        
+                        <img class="image_competence" src="images.jpg" alt="">
+                    </div>
+                    <p class="para_competence">
+                        J'ai acquis le don de cuisine du fait que j'adore créer des plats spécifiques propre à moi.
+                    </p>
+                </div>
+                <div class="competence">
+                    <h2>Compétences en jardinage</h2>
+                    <div class="block_competence_image">
+
+                        <img class="image_competence" src="Plant.png" alt="">
+                    </div>
+                    <p class="para_competence">
+                        Je suis une experte pépinériste. Je 
+                    </p>
+                </div>
+                <div class="competence">
+                    <h2> Compétences Linguistiques</h2>
+                    <div class="block_competence_image">
+
+                        <img class="image_competence" src="Inter.jpg" alt="">
+                    </div>
+                    <p class="para_competence">
+                        Je suis capable de traduire des textes et d'interpréter de l'anglais en français et du français aux langues nationales togolaises (kabiyè, tem et ewe)
+                    </p>
+                </div>
+            </div>
+        </section>
 
 
+        <footer class="dir">
+            <div class="Info">
+               <div style="margin: 2rem;">
+                <p>CONTACT : +228 93 22 11 18</p>
+                <P> E-MAIL : potcholibella@gmail.com</P>
+               </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
